2011-08-29  Chris Palmer  <palmer@google.com>

        Fix failures when FFT array size is changed.
        https://bugs.webkit.org/show_bug.cgi?id=66916

        Reviewed by Kenneth Russell.

        * webaudio/realtimeanalyser-fft-sizing-expected.txt: Added.
        * webaudio/realtimeanalyser-fft-sizing.html: Added.

2011-08-29  Abhishek Arya  <inferno@chromium.org>

        Crash in InlineBox::deleteLine due to accessing removed
        renderer.
        https://bugs.webkit.org/show_bug.cgi?id=66015

        Reviewed by Simon Fraser.

        * fast/block/line-layout/inline-box-wrapper-crash-expected.txt: Added.
        * fast/block/line-layout/inline-box-wrapper-crash.html: Added.

2011-08-29  Chris Marrin  <cmarrin@apple.com>

        Fixing LayoutTests broken by http://trac.webkit.org/changeset/93980

        Unreviewed.
        
        Add Mac specific tests to take into account new requestAnimationFrame functionality

        * platform/mac/fast/dom/Window/window-properties-expected.txt: Added.
        * platform/mac/fast/dom/Window/window-property-descriptors-expected.txt: Added.
        * platform/mac/fast/dom/prototype-inheritance-expected.txt: Added.

2011-08-29  Tony Chang  <tony@chromium.org>

        Implement -webkit-flex-pack for horizontal flexboxen
        https://bugs.webkit.org/show_bug.cgi?id=66898

        Reviewed by Ojan Vafai.

        * css3/flexbox/004-expected.txt: Added.
        * css3/flexbox/004.html: Added.

2011-08-29  Sam Weinig  <sam@webkit.org>

        Update tests after landing Event constructors.

        Reviewed by Anders Carlsson.

        * fast/dom/constructed-objects-prototypes-expected.txt:
        * fast/dom/dom-constructors-expected.txt:
        * fast/dom/dom-constructors.html:

2011-08-29  Stephen White  <senorblanco@chromium.org>

        Unreviewed gardening.

        Mark test fast/canvas/setWidthResetAfterForcedRender.html as failing
        after r93988.

        * platform/chromium/test_expectations.txt:
