@@ -1,0 +1,24 @@
+<!DOCTYPE html>
+<html>
+<body>
+This test ensures that whatever written within dfn tag is italicized. <br>
+For example the <dfn id="dfntag">dfn</dfn> should be italicized.
+
+<script>
+var dfnfont = document.defaultView.getComputedStyle(document.getElementById('dfntag'), "").getPropertyValue("font-style");
+var testresult;
+
+if (dfnfont == 'italic')
+    testresult = 'PASS';
+else
+    testresult = 'FAIL';
+
+if (window.layoutTestController) {
+    layoutTestController.dumpAsText();
+}
+
+document.writeln(testresult);
+
+</script>
+</body>
+</html>
